--- a/action.yml
+++ b/action.yml
@@ -1,6 +1,9 @@
 name: "Build and Push Docker Image Digest"
 description: "Build and push Docker image digest for specified platform"
 inputs:
+  image-name:
+    description: "The name of the Docker image"
+    required: true
   platform:
     description: "The platform to build the Docker image for"
     required: true
@@ -27,7 +30,7 @@ runs:
       id: meta
       uses: docker/metadata-action@v5.6.1
       with:
-        images: ${{ env.IMAGE_NAME }}
+        images: ${{ inputs.image-name }}
 
     - name: Set up Docker buildx for cache
       uses: docker/setup-buildx-action@v3.8.0
@@ -37,24 +40,24 @@ runs:
       uses: docker/build-push-action@v6.13.0
       with:
         platforms: linux/${{ inputs.platform }}
-        outputs: type=image,name=${{ env.IMAGE_NAME }},push-by-digest=true,name-canonical=true,push=true
+        outputs: type=image,name=${{ inputs.image-name }},push-by-digest=true,name-canonical=true,push=true
         file: ${{ inputs.file }}
         context: ${{ inputs.context }}
         labels: ${{ steps.meta.outputs.labels }}
-        cache-from: type=registry,ref=${{ env.IMAGE_NAME }}:buildcache-${{ inputs.platform }}
-        cache-to: type=registry,ref=${{ env.IMAGE_NAME }}:buildcache-${{ inputs.platform }}
+        cache-from: type=registry,ref=${{ inputs.image-name }}:buildcache-${{ inputs.platform }}
+        cache-to: type=registry,ref=${{ inputs.image-name }}:buildcache-${{ inputs.platform }}
 
     - name: Export digest
       run: |
-        mkdir -p /tmp/digests/${{ env.IMAGE_NAME }}
+        mkdir -p /tmp/digests/${{ inputs.image-name }}
         digest="${{ steps.build.outputs.digest }}"
-        touch "/tmp/digests/${{ env.IMAGE_NAME }}/${digest#sha256:}"
+        touch "/tmp/digests/${{ inputs.image-name }}/${digest#sha256:}"
       shell: bash
 
     - name: Upload digest
       uses: actions/upload-artifact@v4.6.0
       with:
         name: digests-${{ inputs.platform }}
-        path: /tmp/digests/${{ env.IMAGE_NAME }}/*
+        path: /tmp/digests/${{ inputs.image-name }}/*
         if-no-files-found: error
         retention-days: 1
