--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -11,6 +11,11 @@ on:
         description: "Path to the build context"
         required: false
         default: "."
+      name:
+        description: "Name of the image (without registry and repository)"
+        required: false
+        default: ""
+        example: "/my-image"
 
 env:
   REGISTRY: ghcr.io
@@ -37,7 +42,7 @@ jobs:
 
       - name: Set image name to lowercase
         run: |
-          IMAGE_NAME=$(echo "${{ env.REGISTRY }}/${{ github.repository }}" | tr '[:upper:]' '[:lower:]')
+          IMAGE_NAME=$(echo "${{ env.REGISTRY }}/${{ github.repository }}${{ inputs.name }}" | tr '[:upper:]' '[:lower:]')
           echo "IMAGE_NAME=$IMAGE_NAME" >> $GITHUB_ENV
 
       - name: Build and push Docker image
