--- a/action.yml
+++ b/action.yml
@@ -58,6 +58,6 @@ runs:
       uses: actions/upload-artifact@v4.6.0
       with:
         name: digests-${{ inputs.platform }}
-        path: /tmp/digests/${{ inputs.image-name }}/*
+        path: /tmp/digests/${{ inputs.image-name }}
         if-no-files-found: error
         retention-days: 1
