--- a/action.yml
+++ b/action.yml
@@ -52,12 +52,13 @@ runs:
         mkdir -p /tmp/digests/${{ inputs.image-name }}
         digest="${{ steps.build.outputs.digest }}"
         touch "/tmp/digests/${{ inputs.image-name }}/${digest#sha256:}"
+        echo "ARTIFACT_NAME=${digest#sha256:}" >> $GITHUB_ENV
       shell: bash
 
     - name: Upload digest
       uses: actions/upload-artifact@v4.6.0
       with:
-        name: digests-${{ inputs.platform }}
-        path: /tmp/digests/${{ inputs.image-name }}
+        name: digests-${{ env.ARTIFACT_NAME }}
+        path: /tmp/digests/${{ inputs.image-name }}/*
         if-no-files-found: error
         retention-days: 1
