--- a/action.yml
+++ b/action.yml
@@ -16,6 +16,10 @@ inputs:
   context:
     description: "Path to the build context"
     required: true
+  build-args:
+    description: "Build arguments"
+    required: false
+    default: []
 runs:
   using: "composite"
   steps:
@@ -46,6 +50,7 @@ runs:
         labels: ${{ steps.meta.outputs.labels }}
         cache-from: type=registry,ref=${{ inputs.image-name }}:buildcache-${{ inputs.platform }}
         cache-to: type=registry,ref=${{ inputs.image-name }}:buildcache-${{ inputs.platform }}
+        build-args: ${{ inputs.build-args }}
 
     - name: Export digest
       run: |
