--- a/action.yml
+++ b/action.yml
@@ -19,7 +19,7 @@ inputs:
   build-args:
     description: "Build arguments"
     required: false
-    default: []
+    default: ""
 runs:
   using: "composite"
   steps:
