--- a/action.yml
+++ b/action.yml
@@ -35,6 +35,12 @@ runs:
       uses: docker/metadata-action@v5.6.1
       with:
         images: ${{ inputs.image-name }}
+        tags: |
+          type=raw,value=latest
+          type=ref,event=tag
+          type=ref,event=branch
+          type=sha
+          type=ref,event=pr
 
     - name: Set up Docker buildx for cache
       uses: docker/setup-buildx-action@v3.8.0
@@ -51,6 +57,7 @@ runs:
         cache-from: type=registry,ref=${{ inputs.image-name }}:buildcache-${{ inputs.platform }}
         cache-to: type=registry,ref=${{ inputs.image-name }}:buildcache-${{ inputs.platform }}
         build-args: ${{ inputs.build-args }}
+        tags: ${{ steps.meta.outputs.tags }}
 
     - name: Export digest
       run: |
