--- a/action.yml
+++ b/action.yml
@@ -49,7 +49,7 @@ runs:
       id: build
       uses: docker/build-push-action@v6.13.0
       with:
-        platforms: linux/${{ inputs.platform }}
+        platforms: ${{ inputs.platform }}
         outputs: type=image,name=${{ inputs.image-name }},push-by-digest=false,name-canonical=true,push=true
         file: ${{ inputs.file }}
         context: ${{ inputs.context }}
