--- a/action.yml
+++ b/action.yml
@@ -42,6 +42,9 @@ runs:
           type=sha
           type=ref,event=pr
 
+    - name: Set up QEMU
+      uses: docker/setup-qemu-action@v3
+
     - name: Set up Docker buildx for cache
       uses: docker/setup-buildx-action@v3.8.0
 
