--- a/action.yml
+++ b/action.yml
@@ -44,6 +44,8 @@ runs:
 
     - name: Set up QEMU
       uses: docker/setup-qemu-action@v3
+      with:
+        platforms: ${{ inputs.platform }}
 
     - name: Set up Docker buildx for cache
       uses: docker/setup-buildx-action@v3.8.0
@@ -52,13 +54,13 @@ runs:
       id: build
       uses: docker/build-push-action@v6.13.0
       with:
-        platforms: ${{ inputs.platform }}
+        platforms: linux/${{ inputs.platform }}
         outputs: type=image,name=${{ inputs.image-name }},push-by-digest=false,name-canonical=true,push=true
         file: ${{ inputs.file }}
         context: ${{ inputs.context }}
         labels: ${{ steps.meta.outputs.labels }}
-        cache-from: type=registry,ref=${{ inputs.image-name }}:buildcache
-        cache-to: type=registry,ref=${{ inputs.image-name }}:buildcache
+        cache-from: type=registry,ref=${{ inputs.image-name }}:buildcache-${{ inputs.platform }}
+        cache-to: type=registry,ref=${{ inputs.image-name }}:buildcache-${{ inputs.platform }}
         build-args: ${{ inputs.build-args }}
         tags: ${{ steps.meta.outputs.tags }}
 
