--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -18,6 +18,11 @@ on:
         description: "Name of the image (without registry and repository)"
         required: false
         default: ""
+      build-args:
+        type: string
+        description: "Build arguments"
+        required: false
+        default: ""
 
 env:
   REGISTRY: ghcr.io
@@ -55,48 +60,6 @@ jobs:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           file: ${{ inputs.dockerfile }}
           context: ${{ inputs.context }}
+          build-args: ${{ inputs.build-args }}
 
-  merge-digests:
-    runs-on: ubuntu-latest
-    needs: build-images
-    permissions:
-      contents: read
-      packages: write
-      attestations: write
-      id-token: write
-    steps:
-      - name: Set image name to lowercase
-        run: |
-          IMAGE_NAME=$(echo "${{ env.REGISTRY }}/${{ github.repository }}${{ inputs.name }}" | tr '[:upper:]' '[:lower:]')
-          echo "IMAGE_NAME=$IMAGE_NAME" >> $GITHUB_ENV
-          echo "ARTIFACT_NAMESPACE=$(echo "$IMAGE_NAME" | sha256sum | awk '{print $1}')" >> $GITHUB_ENV
 
-      - name: Download digests
-        uses: actions/download-artifact@v4.1.8
-        with:
-          path: /tmp/digests/${{ env.IMAGE_NAME }}
-          pattern: digests-${{ env.ARTIFACT_NAMESPACE }}-*
-          merge-multiple: true
-
-      - name: Log in to the container registry
-        uses: docker/login-action@v3.3.0
-        with:
-          registry: ${{ env.REGISTRY }}
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Extract metadata (tags, labels) for Docker
-        id: meta
-        uses: docker/metadata-action@v5.6.1
-        with:
-          images: ${{ env.IMAGE_NAME }}
-
-      - name: Create manifest list and push
-        working-directory: /tmp/digests/${{ env.IMAGE_NAME }}
-        run: |
-          docker buildx imagetools create $(jq -cr '.tags | map("-t " + .) | join(" ")' <<< "$DOCKER_METADATA_OUTPUT_JSON") \
-            $(printf '${{ env.IMAGE_NAME }}@sha256:%s ' *)
-
-      - name: Inspect image
-        run: |
-          docker buildx imagetools inspect ${{ env.IMAGE_NAME }}:${{ steps.meta.outputs.version }}
