--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -53,7 +53,7 @@ jobs:
           echo "IMAGE_NAME=$IMAGE_NAME" >> $GITHUB_ENV
 
       - name: Build and push Docker image
-        uses: ChronextGmbH/docker-build-push-digest-action@build-args
+        uses: ChronextGmbH/docker-build-push-digest-action@main
         with:
           image-name: ${{ env.IMAGE_NAME }}
           platform: ${{ matrix.platform.name }}
