--- a/.github/workflows/helm-deployment.yml
+++ b/.github/workflows/helm-deployment.yml
@@ -32,7 +32,7 @@ jobs:
     environment: ${{ inputs.environment }}
 
     container:
-      image: ${{ inputs.docker_image }}
+      image: ghcr.io/chronextgmbh/helm-deploy:master
       volumes:
         - /var/run/secrets/kubernetes.io/serviceaccount/ca.crt:/var/run/ca.crt
         - /var/run/secrets/kubernetes.io/serviceaccount/token:/var/run/token
@@ -49,7 +49,7 @@ jobs:
           envsubst < deploy/helm/values.yaml > deploy/helm/values-env.yaml
           cat deploy/helm/values-env.yaml
           export TOKEN=$(cat /var/run/token)
-          IMAGE_NAME=$(echo "${REGISTRY}/${IMAGE_NAME}:${IMAGE_TAG}" | tr '[:upper:]' '[:lower:]')
+          IMAGE_NAME=$(echo "${{ inputs.docker_image }}" | tr '[:upper:]' '[:lower:]')
           
           helm upgrade $HELM_APP_NAME /service-chart \
             --kube-token $TOKEN \
