--- a/.github/workflows/helm-deployment.yml
+++ b/.github/workflows/helm-deployment.yml
@@ -11,9 +11,11 @@ on:
         description: "Deployment environment"
         required: true
         type: string
-    secrets:
-      SQS_URL:
+      sqs_url_prefix:
+        description: "base sqs url"
         required: true
+        type: string
+    secrets:
       GHA_TOKEN:
         required: true
       AWS_KEDA_PROD_ACCESS_KEY_ID:
@@ -49,7 +51,7 @@ jobs:
 
       - name: Deploy to ${{ inputs.environment }}
         run: |
-          export SQS_URL=${{ inputs.SQS_URL }}
+          export SQS_URL=${{ inputs.sqs_url_prefix }}
           envsubst < deploy/helm/values.yaml > deploy/helm/values-env.yaml
           cat deploy/helm/values-env.yaml
           export TOKEN=$(cat /var/run/token)
