--- a/.github/workflows/helm-deployment.yml
+++ b/.github/workflows/helm-deployment.yml
@@ -79,7 +79,7 @@ jobs:
             --debug --install --create-namespace \
             -f deploy/helm/values-env.yaml \
             --namespace ${{ inputs.namespace }} \
-            --set app_env=${{ inputs.helm_app_env }} \
+            --set app_env=${{ inputs.chart_app_env }} \
             --set image.name=$IMAGE_NAME \
             --set image.credentials.username=${{ github.actor }} \
             --set image.credentials.password=${{ secrets.GITHUB_TOKEN }} \
