--- a/.github/workflows/helm-deployment.yml
+++ b/.github/workflows/helm-deployment.yml
@@ -19,6 +19,11 @@ on:
         description: "Kubernetes namespace"
         required: true
         type: string
+      ingress_host:
+        description: "ingress host - application domain"
+        required: false
+        type: string
+        default: ""
       chart_app_env:
         description: "App environment"
         required: true
@@ -81,6 +86,7 @@ jobs:
             --namespace ${{ inputs.namespace }} \
             --set app_env=${{ inputs.chart_app_env }} \
             --set image.name=$IMAGE_NAME \
+            --set image.name=${{ inputs.ingress_host }} \
             --set image.credentials.username=${{ github.actor }} \
             --set image.credentials.password=${{ secrets.GITHUB_TOKEN }} \
             --set github.credentials.username=${{ github.actor }} \
