--- a/.github/workflows/helm-deployment.yml
+++ b/.github/workflows/helm-deployment.yml
@@ -36,6 +36,8 @@ on:
     secrets:
       GHA_TOKEN:
         required: true
+      REGISTRY_TOKEN:
+        required: true
       AWS_KEDA_PROD_ACCESS_KEY_ID:
         required: true
       AWS_KEDA_PROD_ACCESS_KEY_SECRET:
@@ -86,9 +88,9 @@ jobs:
             --set image.name=$IMAGE_NAME \
             --set ingress.host=${{ inputs.ingress_host }} \
             --set image.credentials.username=${{ github.actor }} \
-            --set image.credentials.password=${{ secrets.GHA_TOKEN }} \
+            --set image.credentials.password=${{ secrets.REGISTRY_TOKEN }} \
             --set github.credentials.username=${{ github.actor }} \
-            --set github.credentials.password=${{ secrets.GHA_TOKEN }} \
+            --set github.credentials.password=${{ secrets.REGISTRY_TOKEN }} \
             --set keda.prod.aws_key_id=${{ secrets.AWS_KEDA_PROD_ACCESS_KEY_ID }} \
             --set keda.prod.aws_key_secret=${{ secrets.AWS_KEDA_PROD_ACCESS_KEY_SECRET }} \
             --set keda.stage.aws_key_id=${{ secrets.AWS_KEDA_STAGE_ACCESS_KEY_ID }} \
