--- a/.github/workflows/helm-deployment.yml
+++ b/.github/workflows/helm-deployment.yml
@@ -89,8 +89,8 @@ jobs:
             --set ingress.host=${{ inputs.ingress_host }} \
             --set image.credentials.username=${{ github.actor }} \
             --set image.credentials.password=${{ secrets.REGISTRY_TOKEN }} \
-            --set github.credentials.username=${{ github.actor }} \
-            --set github.credentials.password=${{ secrets.REGISTRY_TOKEN }} \
+            --set github.credentials.username=${{ secrets.GHCR_USERNAME }} \
+            --set github.credentials.password=${{ secrets.GHCR_TOKEN }} \
             --set keda.prod.aws_key_id=${{ secrets.AWS_KEDA_PROD_ACCESS_KEY_ID }} \
             --set keda.prod.aws_key_secret=${{ secrets.AWS_KEDA_PROD_ACCESS_KEY_SECRET }} \
             --set keda.stage.aws_key_id=${{ secrets.AWS_KEDA_STAGE_ACCESS_KEY_ID }} \
