--- a/.github/workflows/helm-deployment.yml
+++ b/.github/workflows/helm-deployment.yml
@@ -87,8 +87,8 @@ jobs:
             --set app_env=${{ inputs.chart_app_env }} \
             --set image.name=$IMAGE_NAME \
             --set ingress.host=${{ inputs.ingress_host }} \
-            --set image.credentials.username=${{ github.actor }} \
-            --set image.credentials.password=${{ secrets.REGISTRY_TOKEN }} \
+            --set image.credentials.username=${{ secrets.GHCR_USERNAME }} \
+            --set image.credentials.password=${{ secrets.GHCR_TOKEN }} \
             --set github.credentials.username=${{ secrets.GHCR_USERNAME }} \
             --set github.credentials.password=${{ secrets.GHCR_TOKEN }} \
             --set keda.prod.aws_key_id=${{ secrets.AWS_KEDA_PROD_ACCESS_KEY_ID }} \
