--- a/.github/workflows/helm-deployment.yml
+++ b/.github/workflows/helm-deployment.yml
@@ -36,6 +36,8 @@ on:
     secrets:
       GHA_TOKEN:
         required: true
+      REGISTRY_USERNAME:
+        required: false
       REGISTRY_TOKEN:
         required: true
       AWS_KEDA_PROD_ACCESS_KEY_ID:
@@ -89,8 +91,8 @@ jobs:
             --set ingress.host=${{ inputs.ingress_host }} \
             --set image.credentials.username=${{ secrets.GHCR_USERNAME }} \
             --set image.credentials.password=${{ secrets.GHCR_TOKEN }} \
-            --set github.credentials.username=${{ secrets.GHCR_USERNAME }} \
-            --set github.credentials.password=${{ secrets.GHCR_TOKEN }} \
+            --set github.credentials.username=${{ secrets.REGISTRY_USERNAME }} \
+            --set github.credentials.password=${{ secrets.REGISTRY_TOKEN }} \
             --set keda.prod.aws_key_id=${{ secrets.AWS_KEDA_PROD_ACCESS_KEY_ID }} \
             --set keda.prod.aws_key_secret=${{ secrets.AWS_KEDA_PROD_ACCESS_KEY_SECRET }} \
             --set keda.stage.aws_key_id=${{ secrets.AWS_KEDA_STAGE_ACCESS_KEY_ID }} \
