--- a/.github/workflows/php-build-push-images.yml
+++ b/.github/workflows/php-build-push-images.yml
@@ -13,6 +13,9 @@ on:
       pub-key:
         description: "service public key"
         required: true
+      private-key:
+          description: "GitHub token"
+          required: false
     inputs:
       image_folder_base:
         type: string
@@ -113,8 +116,9 @@ jobs:
       - build-develop-image
 
     secrets:
-      pub-key: ${{ secrets.PUB_KEY }}
+      pub-key: ${{ secrets.pub-key }}
       composer-token: ${{ secrets.composer-token }}
+      private-key: ${{ secrets.private-key }}
 
     uses: ChronextGmbH/docker-build-push-digest-action/.github/workflows/docker-build-push-deployment-image.yml@main
     with:
